--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="geo.placename" content="Bidadi, Ramanagara" />
     <meta name="geo.position" content="12.7850;77.4150" />
     <meta name="ICBM" content="12.7850, 77.4150" />
+    
+    <!-- Google Tag Manager (Placeholder ID - Replace GTM-XXXXX with actual ID) -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KNCHEMYZ');</script>
+    <!-- End Google Tag Manager -->
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -49,6 +58,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       body { font-family: 'Inter', sans-serif; }
+      /* Custom scrollbar for better professional feel */
+      ::-webkit-scrollbar { width: 8px; }
+      ::-webkit-scrollbar-track { background: #f1f5f9; }
+      ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
+      ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
   <script type="importmap">
 {
@@ -56,15 +70,19 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "react-helmet-async": "https://esm.sh/react-helmet-async@^2.0.4"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.0.0?deps=react@19.2.3,react-dom@19.2.3",
+    "recharts": "https://esm.sh/recharts@^3.6.0?deps=react@19.2.3,react-dom@19.2.3",
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0?deps=react@19.2.3",
+    "react-helmet-async": "https://esm.sh/react-helmet-async@^2.0.4?deps=react@19.2.3,react-dom@19.2.3"
   }
 }
 </script>
 </head>
   <body class="bg-slate-50 text-slate-900">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNCHEMYZ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
   </body>
 </html>
