feat: Add FAQ page and initial content
Introduces a new FAQ page with structured data and mock content. Also includes SEO meta tags and Google verification code in the index.html. Updates mock data to include FAQ items and enhances the LabCapabilities component with structured data for better SEO.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +10,9 @@
     <meta name="geo.position" content="12.7850;77.4150" />
     <meta name="ICBM" content="12.7850, 77.4150" />
     
+    <!-- Google Search Console Verification (Replace content with your actual code) -->
+    <meta name="google-site-verification" content="GSC-VERIFICATION-CODE-HERE" />
+
     <!-- Google Tag Manager (Placeholder ID - Replace GTM-XXXXX with actual ID) -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
